/*
Copyright zhigui Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option java_package = "org.fabric-sdk-go.protos";
option go_package = "fabric-sdk-go/protos";

package protos;

import "common.proto";

// Interface exported by the server.
service Chaincode {
    rpc InstallCC (InstallCCRequest) returns (ServerStatus) {
    }
    rpc InstantiateCC (InstantiateCCRequest) returns (InstantiateCCResponse) {
    }
    rpc UpgradeCC (UpgradeCCRequest) returns (UpgradeCCResponse) {
    }
    rpc InvokeCC (InvokeCCRequest) returns (InvokeCCResponse) {
    }
    rpc QueryCC (QueryCCRequest) returns (QueryCCResponse) {
    }
}

message InstallCCRequest {
    string cc_id = 1;
    string cc_version = 2;
    string cc_path = 3;
}

message InstantiateCCRequest {
    string channel_id = 1;
    string cc_id = 2;
    string cc_version = 3;
    string cc_path = 4;
    repeated bytes args = 5;
    string cc_policy = 6;
}

message InstantiateCCResponse {
    StatusCode status = 1;
    string transaction_id = 2;
}

message UpgradeCCRequest {
    string channel_id = 1;
    string cc_id = 2;
    string cc_version = 3;
    string cc_path = 4;
    repeated bytes args = 5;
    string cc_policy = 6;
}

message UpgradeCCResponse {
    StatusCode status = 1;
    string transaction_id = 2;
}

message InvokeCCRequest {
    string channel_id = 1;
    string cc_id = 2;
    string func = 3;
    repeated bytes args = 4;
}

message InvokeCCResponse {
    StatusCode status = 1;
    string transaction_id = 2;
    bytes payload = 3;
}

message QueryCCRequest {
    string channel_id = 1;
    string cc_id = 2;
    string func = 3;
    repeated bytes args = 4;
}

message QueryCCResponse {
    StatusCode status = 1;
    bytes payload = 2;
}