/*
Copyright zhigui Corp. All Rights Reserved.
SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option java_package = "org.fabric-sdk-go.protos";
option go_package = "fabric-sdk-go/protos";

package protos;

enum StatusCode {
    SUCCESS = 0;
    FAILED = 1;
    FAILED_NEW_CLIENT = 2;
    FAILED_NEW_MSP_CLIENT = 3;
    FAILED_GET_SIGNING_IDENTITY = 4;
    FAILED_CREATE_CHANNEL = 5;
    FAILED_JOIN_CHANNEL = 6;
    FAILED_NEW_CCPACKAGE = 7;
    FAILED_INSTALL_CC = 8;
    FAILED_INSTANTIATE_CC = 9;
    INVALID_ADMIN_CLIENT = 10;
    INVALID_USER_CLIENT = 11;
    NOT_FOUND_ORG_INSTANCE = 12;
    FAILED_INVOKE_CC = 13;
    FAILED_QUERY_CC = 14;
    FAILED_UPGRADE_CC = 15;
}

message ServerStatus {
    StatusCode status = 1;
}